fix search bar spacing for tablet and desktop. increase logo size. fix button text to justify center

--- a/src/components/aNavbar/Navbar.scss
+++ b/src/components/aNavbar/Navbar.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   gap: .5rem;
-  padding: .5rem;
+  padding: 1rem .5rem;
   background-color:$prim-col-White;
   
   @include tablet {
@@ -24,7 +24,7 @@
 
   &__logo img {
     width: fit-content;
-    height: 1.5rem;
+    height: 1.8rem;
   }
   
   &__content {
@@ -33,7 +33,7 @@
     width: 100%;
 
     @include tablet {
-      width: auto;
+      // width: auto;
       flex-grow: 2;
       order: 1;
     }
@@ -44,13 +44,14 @@
     flex-grow: 2;
     display: flex;
     padding-right: 1rem;
-    height: 2.5rem;
+    height: 2.8rem;
     border: none;
     min-width: 10rem;
 
 
     @include tablet {
-      max-width: 16rem;
+      max-width: 20rem;
+      margin-left: auto;
     }
   }
 
@@ -88,7 +89,7 @@
     font-size:$button-font-size-M;
     color:$button-font-color;
     background-color:$button-background;
-    height:$button-height;
+    height: 2rem;
     border-radius:$button-radius;
     font-weight:$button-font-weight;
     gap: .5rem;
@@ -100,15 +101,14 @@
     background-position: 5% 50%;
     border: none;
     text-decoration: none;
-    justify-content: center;
-    padding-top: .3rem;
+    padding-top: .7rem;
 
     &:hover {
       background-color:$button-background-hover;
     }
 
     @include tablet {
-      width:$button-MIN-width-DT;
+      width:30rem;
       order: 2;
       margin-right: .5rem;
     }
